<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="shopList"
            type="pl.sokols.shoppinglist.data.entities.ShopList" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/dialogListTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:text="@string/enter_data"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/listNameTextInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:paddingHorizontal="@dimen/image_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogListTitleTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/listNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={shopList.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/applyListDialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/image_padding"
            android:layout_marginEnd="@dimen/image_padding"
            android:layout_marginBottom="@dimen/default_padding"
            android:text="@string/apply"
            app:cornerRadius="45dp"
            android:textSize="18sp"
            android:paddingHorizontal="@dimen/image_padding"
            android:paddingVertical="@dimen/default_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listNameTextInputLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>